Fix various validation errors

--- a/index.html
+++ b/index.html
@@ -39,14 +39,9 @@
       </section>
       <section>
         <h2>Featured</h2>
-        <picture>
-          <a href="/pages/wip/cse134-hw2.html">
-            <img
-              src="/assets/images/pleaseclick.png"
-              alt="CSE 134B Homework 2"
-            />
-          </a>
-        </picture>
+        <a href="/pages/wip/cse134-hw2.html">
+          <img src="/assets/images/pleaseclick.png" alt="CSE 134B Homework 2" />
+        </a>
       </section>
       <section>
         <h2>Testimonials</h2>
@@ -58,11 +53,11 @@
                 <img
                   src="/assets/images/boba.JPG"
                   alt="Boba"
-                  height="200px"
-                  width="auto"
+                  height="200"
                   loading="lazy"
                 />
               </picture>
+              <h3>Testimonial 1</h3>
               <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting
                 industry.
@@ -76,11 +71,11 @@
                 <img
                   src="/assets/images/boba.JPG"
                   alt="Boba"
-                  height="200px"
-                  width="auto"
+                  height="200"
                   loading="lazy"
                 />
               </picture>
+              <h3>Testimonial 2</h3>
               <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting
                 industry.
@@ -94,11 +89,11 @@
                 <img
                   src="/assets/images/boba.JPG"
                   alt="Boba"
-                  height="200px"
-                  width="auto"
+                  height="200"
                   loading="lazy"
                 />
               </picture>
+              <h3>Testimonial 1</h3>
               <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting
                 industry.
@@ -116,8 +111,7 @@
               <img
                 src="/assets/images/LI-In-Bug.png"
                 alt="Visit LinkedIn profile"
-                height="35px"
-                width="auto"
+                height="35"
                 loading="lazy"
               />
             </a>
