--- a/pages/about.html
+++ b/pages/about.html
@@ -104,12 +104,7 @@
       </table>
       <picture>
         <source srcset="/assets/images/me.webp" type="image/webp" />
-        <img
-          src="/assets/images/me.jpeg"
-          alt="Steven Chin"
-          height="200px"
-          width="auto"
-        />
+        <img src="/assets/images/me.jpeg" alt="Steven Chin" height="200" />
       </picture>
       <button>
         Press this button! Using JavaScript, I could make my picture change and
@@ -124,8 +119,7 @@
               <img
                 src="/assets/images/LI-In-Bug.png"
                 alt="Visit LinkedIn profile"
-                height="35px"
-                width="auto"
+                height="35"
                 loading="lazy"
               />
             </a>
