--- a/pages/contact.html
+++ b/pages/contact.html
@@ -35,7 +35,7 @@
         Lorem Ipsum is simply dummy text of the printing and typesetting
         industry.
       </p>
-      <form action="" method="post">
+      <form method="post">
         <label for="name">Name*</label>
         <input type="text" name="name" id="name" required="required" />
 
@@ -56,8 +56,7 @@
               <img
                 src="/assets/images/LI-In-Bug.png"
                 alt="Visit LinkedIn profile"
-                height="35px"
-                width="auto"
+                height="35"
                 loading="lazy"
               />
             </a>
