--- a/pages/wip/cse134-hw2.html
+++ b/pages/wip/cse134-hw2.html
@@ -145,12 +145,8 @@
 
         <details>
           <summary>dodie Video</summary>
-          <video controls="true" height="800px" width="auto">
-            <source
-              src="/assets/videos/dodie.mp4"
-              type="video/mp4"
-              loading="lazy"
-            />
+          <video controls height="800">
+            <source src="/assets/videos/dodie.mp4" type="video/mp4" />
           </video>
         </details>
 
@@ -163,9 +159,7 @@
           <summary>hojean Song</summary>
           <iframe
             src="https://open.spotify.com/embed/track/3FM5S2h2HYMZHCgbolGE0f?utm_source=generator"
-            width="25%"
             height="352"
-            frameborder="0"
             allowfullscreen=""
             allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
             loading="lazy"
@@ -178,7 +172,7 @@
 
         <details>
           <summary>Synth Music</summary>
-          <audio controls="true">
+          <audio controls>
             <source src="/assets/audio/fsm-team-escp-parallel-synthesis.mp3" />
           </audio>
           <p>
@@ -196,7 +190,7 @@
           did!
         </p>
 
-        <form action="" method="POST">
+        <form method="POST">
           <fieldset>
             <legend>Which song did you like best?</legend>
 
@@ -249,8 +243,7 @@
               <img
                 src="/assets/images/LI-In-Bug.png"
                 alt="Visit LinkedIn profile"
-                height="35px"
-                width="auto"
+                height="35"
                 loading="lazy"
               />
             </a>
