--- a/pages/wip/wip.html
+++ b/pages/wip/wip.html
@@ -57,12 +57,7 @@
           <article>
             <picture>
               <source srcset="/assets/images/boba.webp" type="image/webp" />
-              <img
-                src="/assets/images/boba.JPG"
-                alt="Boba"
-                height="200px"
-                width="auto"
-              />
+              <img src="/assets/images/boba.JPG" alt="Boba" height="200" />
             </picture>
             <h2>Project 2</h2>
             <p>
@@ -79,12 +74,7 @@
           <article>
             <picture>
               <source srcset="/assets/images/boba.webp" type="image/webp" />
-              <img
-                src="/assets/images/boba.JPG"
-                alt="Boba"
-                height="200px"
-                width="auto"
-              />
+              <img src="/assets/images/boba.JPG" alt="Boba" height="200" />
             </picture>
             <h2>Project 3</h2>
             <p>
@@ -101,12 +91,7 @@
           <article>
             <picture>
               <source srcset="/assets/images/boba.webp" type="image/webp" />
-              <img
-                src="/assets/images/boba.JPG"
-                alt="Boba"
-                height="200px"
-                width="auto"
-              />
+              <img src="/assets/images/boba.JPG" alt="Boba" height="200" />
             </picture>
             <h2>Project 4</h2>
             <p>
@@ -126,8 +111,7 @@
               <img
                 src="/assets/images/boba.JPG"
                 alt="Boba"
-                height="200px"
-                width="auto"
+                height="200"
                 loading="lazy"
               />
             </picture>
@@ -152,8 +136,7 @@
               <img
                 src="/assets/images/LI-In-Bug.png"
                 alt="Visit LinkedIn profile"
-                height="35px"
-                width="auto"
+                height="35"
                 loading="lazy"
               />
             </a>
