--- a/pages/projects/projects.html
+++ b/pages/projects/projects.html
@@ -33,24 +33,14 @@
       <h1>Projects</h1>
       <picture>
         <source srcset="/assets/images/boba.webp" type="image/webp" />
-        <img
-          src="/assets/images/boba.JPG"
-          alt="Boba"
-          height="200px"
-          width="auto"
-        />
+        <img src="/assets/images/boba.JPG" alt="Boba" height="200" />
       </picture>
       <ul>
         <li>
           <article>
             <picture>
               <source srcset="/assets/images/boba.webp" type="image/webp" />
-              <img
-                src="/assets/images/boba.JPG"
-                alt="Boba"
-                height="200px"
-                width="auto"
-              />
+              <img src="/assets/images/boba.JPG" alt="Boba" height="200" />
             </picture>
             <h2>Project 1</h2>
             <p>
@@ -67,12 +57,7 @@
           <article>
             <picture>
               <source srcset="/assets/images/boba.webp" type="image/webp" />
-              <img
-                src="/assets/images/boba.JPG"
-                alt="Boba"
-                height="200px"
-                width="auto"
-              />
+              <img src="/assets/images/boba.JPG" alt="Boba" height="200" />
             </picture>
             <h2>Project 2</h2>
             <p>
@@ -92,8 +77,7 @@
               <img
                 src="/assets/images/boba.JPG"
                 alt="Boba"
-                height="200px"
-                width="auto"
+                height="200"
                 loading="lazy"
               />
             </picture>
@@ -115,8 +99,7 @@
               <img
                 src="/assets/images/boba.JPG"
                 alt="Boba"
-                height="200px"
-                width="auto"
+                height="200"
                 loading="lazy"
               />
             </picture>
@@ -141,8 +124,7 @@
               <img
                 src="/assets/images/LI-In-Bug.png"
                 alt="Visit LinkedIn profile"
-                height="35px"
-                width="auto"
+                height="35"
                 loading="lazy"
               />
             </a>
