Add flexbox styles to homepage

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8" />
     <title>Steven Chin</title>
     <link rel="icon" href="/assets/images/logo.svg" />
+    <link rel="stylesheet" href="/assets/styles/index.css" />
   </head>
   <body>
     <header>
       <nav>
-        <ul>
+        <ul class="site-nav">
           <li>
             <a href="/pages/about.html">About</a>
           </li>
@@ -45,9 +46,9 @@
       </section>
       <section>
         <h2>Testimonials</h2>
-        <ul>
+        <ul class="testimonial-section">
           <li>
-            <article>
+            <article class="testimonial">
               <picture>
                 <source srcset="/assets/images/boba.webp" type="image/webp" />
                 <img
@@ -65,7 +66,7 @@
             </article>
           </li>
           <li>
-            <article>
+            <article class="testimonial">
               <picture>
                 <source srcset="/assets/images/boba.webp" type="image/webp" />
                 <img
@@ -83,7 +84,7 @@
             </article>
           </li>
           <li>
-            <article>
+            <article class="testimonial">
               <picture>
                 <source srcset="/assets/images/boba.webp" type="image/webp" />
                 <img
@@ -105,7 +106,7 @@
     </main>
     <footer>
       <address>
-        <ul>
+        <ul class="socials">
           <li>
             <a href="https://linkedin.com/in/sdchin/">
               <img
