Update socials with GitHub icon

--- a/pages/about.html
+++ b/pages/about.html
@@ -115,7 +115,17 @@
       <address>
         <ul>
           <li>
-            <a href="https://linkedin.com/in/sdchin/">
+            <a href="https://github.com/sdchin">
+              <img
+                src="/assets/images/github-mark.svg"
+                alt="Visit GitHub profile"
+                height="35"
+                loading="lazy"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="https://linkedin.com/in/sdchin">
               <img
                 src="/assets/images/LI-In-Bug.png"
                 alt="Visit LinkedIn profile"
