Add flex and grid layout to WIP page

--- a/pages/wip/wip.html
+++ b/pages/wip/wip.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8" />
     <title>Steven Chin - WIP</title>
     <link rel="icon" href="/assets/images/logo.svg" />
+    <link rel="stylesheet" href="/assets/styles/projects.css" />
   </head>
   <body>
     <header>
       <nav>
-        <ul>
+        <ul class="site-nav">
           <li>
             <a href="/pages/about.html">About</a>
           </li>
@@ -31,18 +32,20 @@
     </header>
     <main>
       <h1>WIP</h1>
-      <ul>
+      <ul class="project-grid">
         <li>
-          <article>
+          <article class="project-card">
             <a href="/pages/wip/cse134-hw2.html">
-              <picture>
+              <picture class="project-picture">
                 <img
                   src="/assets/images/pleaseclick.png"
                   alt="CSE 134B Homework 2"
                 />
               </picture>
             </a>
-            <h2><a href="/pages/wip/cse134-hw2.html">CSE 134B HW2</a></h2>
+            <h2 class="project-heading">
+              <a href="/pages/wip/cse134-hw2.html">CSE 134B HW2</a>
+            </h2>
             <p>
               Lorem Ipsum is simply dummy text of the printing and typesetting
               industry. Lorem Ipsum has been the industry's standard dummy text
@@ -54,12 +57,12 @@
           </article>
         </li>
         <li>
-          <article>
-            <picture>
+          <article class="project-card">
+            <picture class="project-picture">
               <source srcset="/assets/images/boba.webp" type="image/webp" />
               <img src="/assets/images/boba.JPG" alt="Boba" height="200" />
             </picture>
-            <h2>Project 2</h2>
+            <h2 class="project-heading">Project 2</h2>
             <p>
               Lorem Ipsum is simply dummy text of the printing and typesetting
               industry. Lorem Ipsum has been the industry's standard dummy text
@@ -71,12 +74,12 @@
           </article>
         </li>
         <li>
-          <article>
-            <picture>
+          <article class="project-card">
+            <picture class="project-picture">
               <source srcset="/assets/images/boba.webp" type="image/webp" />
               <img src="/assets/images/boba.JPG" alt="Boba" height="200" />
             </picture>
-            <h2>Project 3</h2>
+            <h2 class="project-heading">Project 3</h2>
             <p>
               Lorem Ipsum is simply dummy text of the printing and typesetting
               industry. Lorem Ipsum has been the industry's standard dummy text
@@ -88,12 +91,12 @@
           </article>
         </li>
         <li>
-          <article>
-            <picture>
+          <article class="project-card">
+            <picture class="project-picture">
               <source srcset="/assets/images/boba.webp" type="image/webp" />
               <img src="/assets/images/boba.JPG" alt="Boba" height="200" />
             </picture>
-            <h2>Project 4</h2>
+            <h2 class="project-heading">Project 4</h2>
             <p>
               Lorem Ipsum is simply dummy text of the printing and typesetting
               industry. Lorem Ipsum has been the industry's standard dummy text
@@ -105,8 +108,8 @@
           </article>
         </li>
         <li>
-          <article>
-            <picture>
+          <article class="project-card">
+            <picture class="project-picture">
               <source srcset="/assets/images/boba.webp" type="image/webp" />
               <img
                 src="/assets/images/boba.JPG"
@@ -115,7 +118,7 @@
                 loading="lazy"
               />
             </picture>
-            <h2>Project 5</h2>
+            <h2 class="project-heading">Project 5</h2>
             <p>
               Lorem Ipsum is simply dummy text of the printing and typesetting
               industry. Lorem Ipsum has been the industry's standard dummy text
@@ -130,7 +133,7 @@
     </main>
     <footer>
       <address>
-        <ul>
+        <ul class="socials">
           <li>
             <a href="https://github.com/sdchin">
               <img
