Make images fit inside project cards

--- a/pages/projects/projects.html
+++ b/pages/projects/projects.html
@@ -32,7 +32,7 @@
     </header>
     <main class="project-main">
       <h1>Projects</h1>
-      <picture class="featured">
+      <picture class="project-picture" class="featured">
         <source srcset="/assets/images/boba.webp" type="image/webp" />
         <img
           src="/assets/images/boba.JPG"
@@ -44,7 +44,7 @@
       <ul class="project-grid">
         <li>
           <article class="project-card">
-            <picture>
+            <picture class="project-picture">
               <source srcset="/assets/images/boba.webp" type="image/webp" />
               <img src="/assets/images/boba.JPG" alt="Boba" height="200" />
             </picture>
@@ -61,7 +61,7 @@
         </li>
         <li>
           <article class="project-card">
-            <picture>
+            <picture class="project-picture">
               <source srcset="/assets/images/boba.webp" type="image/webp" />
               <img src="/assets/images/boba.JPG" alt="Boba" height="200" />
             </picture>
@@ -78,7 +78,7 @@
         </li>
         <li>
           <article class="project-card">
-            <picture>
+            <picture class="project-picture">
               <source srcset="/assets/images/boba.webp" type="image/webp" />
               <img
                 src="/assets/images/boba.JPG"
@@ -100,7 +100,7 @@
         </li>
         <li>
           <article class="project-card">
-            <picture>
+            <picture class="project-picture">
               <source srcset="/assets/images/boba.webp" type="image/webp" />
               <img
                 src="/assets/images/boba.JPG"
