Update projects page layout

--- a/pages/projects/projects.html
+++ b/pages/projects/projects.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="/assets/images/logo.svg" />
     <link rel="stylesheet" href="/assets/styles/projects.css" />
   </head>
-  <body>
+  <body class="page-grid">
     <header>
       <nav>
         <ul class="site-nav">
@@ -32,7 +32,7 @@
     </header>
     <main class="project-main">
       <h1>Projects</h1>
-      <picture class="project-picture" class="featured">
+      <picture class="featured">
         <source srcset="/assets/images/boba.webp" type="image/webp" />
         <img
           src="/assets/images/boba.JPG"
