Update layout for homepage

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="/assets/images/logo.svg" />
     <link rel="stylesheet" href="/assets/styles/index.css" />
   </head>
-  <body>
+  <body class="page-grid">
     <header>
       <nav>
         <ul class="site-nav">
@@ -41,7 +41,12 @@
       <section>
         <h2>Featured</h2>
         <a href="/pages/wip/cse134-hw2.html">
-          <img src="/assets/images/pleaseclick.png" alt="CSE 134B Homework 2" />
+          <picture class="featured">
+            <img
+              src="/assets/images/pleaseclick.png"
+              alt="CSE 134B Homework 2"
+            />
+          </picture>
         </a>
       </section>
       <section>
@@ -49,7 +54,7 @@
         <ul class="testimonial-section">
           <li>
             <article class="testimonial">
-              <picture>
+              <picture class="testimonial-picture">
                 <source srcset="/assets/images/boba.webp" type="image/webp" />
                 <img
                   src="/assets/images/boba.JPG"
@@ -58,7 +63,7 @@
                   loading="lazy"
                 />
               </picture>
-              <h3>Testimonial 1</h3>
+              <h3 class="testimonial-heading">Testimonial 1</h3>
               <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting
                 industry.
@@ -67,7 +72,7 @@
           </li>
           <li>
             <article class="testimonial">
-              <picture>
+              <picture class="testimonial-picture">
                 <source srcset="/assets/images/boba.webp" type="image/webp" />
                 <img
                   src="/assets/images/boba.JPG"
@@ -76,7 +81,7 @@
                   loading="lazy"
                 />
               </picture>
-              <h3>Testimonial 2</h3>
+              <h3 class="testimonial-heading">Testimonial 2</h3>
               <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting
                 industry.
@@ -85,7 +90,7 @@
           </li>
           <li>
             <article class="testimonial">
-              <picture>
+              <picture class="testimonial-picture">
                 <source srcset="/assets/images/boba.webp" type="image/webp" />
                 <img
                   src="/assets/images/boba.JPG"
@@ -94,7 +99,7 @@
                   loading="lazy"
                 />
               </picture>
-              <h3>Testimonial 1</h3>
+              <h3 class="testimonial-heading">Testimonial 1</h3>
               <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting
                 industry.
