Update project pictures

--- a/pages/projects/projects.html
+++ b/pages/projects/projects.html
@@ -45,8 +45,16 @@
         <li>
           <article class="project-card">
             <picture class="project-picture">
-              <source srcset="/assets/images/boba.webp" type="image/webp" />
-              <img src="/assets/images/boba.JPG" alt="Boba" height="200" />
+              <source
+                srcset="/assets/images/project-1-small-compressed.webp"
+                media="(max-width: 800px)"
+                type="image/webp"
+              />
+              <img
+                src="/assets/images/project-1-medium-compressed.webp"
+                alt="Breakfast platter and magazine"
+                height="400"
+              />
             </picture>
             <h2 class="project-heading">Project 1</h2>
             <p>
@@ -77,8 +85,16 @@
         <li>
           <article class="project-card">
             <picture class="project-picture">
-              <source srcset="/assets/images/boba.webp" type="image/webp" />
-              <img src="/assets/images/boba.JPG" alt="Boba" height="200" />
+              <source
+                srcset="/assets/images/project-2-small-compressed.webp"
+                media="(max-width: 800px)"
+                type="image/webp"
+              />
+              <img
+                src="/assets/images/project-2-medium-compressed.webp"
+                alt="Woman holding camera to her eye with foliage in background"
+                height="400"
+              />
             </picture>
             <h2 class="project-heading">Project 2</h2>
             <p>
@@ -109,12 +125,15 @@
         <li>
           <article class="project-card">
             <picture class="project-picture">
-              <source srcset="/assets/images/boba.webp" type="image/webp" />
+              <source
+                srcset="/assets/images/project-3-small-compressed.webp"
+                media="(max-width: 800px)"
+                type="image/webp"
+              />
               <img
-                src="/assets/images/boba.JPG"
-                alt="Boba"
-                height="200"
-                loading="lazy"
+                src="/assets/images/project-3-medium-compressed.webp"
+                alt="Interior design: A room with a large window, red chairs, mirror with rustic frame"
+                height="400"
               />
             </picture>
             <h2 class="project-heading">Project 3</h2>
@@ -146,12 +165,15 @@
         <li>
           <article class="project-card">
             <picture class="project-picture">
-              <source srcset="/assets/images/boba.webp" type="image/webp" />
+              <source
+                srcset="/assets/images/project-4-small-compressed.webp"
+                media="(max-width: 800px)"
+                type="image/webp"
+              />
               <img
-                src="/assets/images/boba.JPG"
-                alt="Boba"
-                height="200"
-                loading="lazy"
+                src="/assets/images/project-4-medium-compressed.webp"
+                alt="Black and white noir: A woman leans on a counter smoking as a man looks at her"
+                height="400"
               />
             </picture>
             <h2 class="project-heading">Project 4</h2>
