--- a/pages/about.html
+++ b/pages/about.html
@@ -18,8 +18,8 @@
             <a href="/pages/projects/projects.html">Projects</a>
           </li>
           <li>
-            <a href="/index.html">
-              <img src="/assets/images/logo.svg" alt="Home" />
+            <a href="/index.html" class="logo-link">
+              <img src="/assets/images/logo.svg" alt="Home" class="logo" />
             </a>
           </li>
           <li>
