--- a/pages/wip/cse134-hw2.html
+++ b/pages/wip/cse134-hw2.html
@@ -4,16 +4,17 @@
     <meta charset="utf-8" />
     <title>Steven Chin - CSE 134B HW2</title>
     <link rel="icon" href="/assets/images/logo.svg" />
+    <link rel="stylesheet" href="/assets/styles/index.css" />
     <style>
       .canvas {
         border: 5px dashed blue;
       }
     </style>
   </head>
-  <body>
+  <body class="page-grid">
     <header>
       <nav>
-        <ul>
+        <ul class="site-nav">
           <li>
             <a href="/pages/about.html">About</a>
           </li>
@@ -237,7 +238,7 @@
     </main>
     <footer>
       <address>
-        <ul>
+        <ul class="socials">
           <li>
             <a href="https://github.com/sdchin">
               <img
