--- a/pages/wip/wip.html
+++ b/pages/wip/wip.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="/assets/images/logo.svg" />
     <link rel="stylesheet" href="/assets/styles/projects.css" />
   </head>
-  <body>
+  <body class="page-grid">
     <header>
       <nav>
         <ul class="site-nav">
