Update confirm message

--- a/hw4/nativedialogs.html
+++ b/hw4/nativedialogs.html
@@ -40,7 +40,7 @@
             const confirmMessage = "Do you confirm?";
             let confirmed = window.confirm(confirmMessage);
 
-            const outputMessage = `Confirm result: ${confirmed}`;
+            const outputMessage = `The value returned by the confirm method is : ${confirmed}`;
             output.textContent = outputMessage;
           }, delay);
         });
