--- a/hw4/crud.html
+++ b/hw4/crud.html
@@ -11,5 +11,6 @@
 
     <script type="module" src="./blog.js"></script>
     <script type="module" src="./Post.js"></script>
+    <script type="module" src="./blogdialog.js"></script>
   </body>
 </html>
