--- a/pages/projects/projects.html
+++ b/pages/projects/projects.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-80XHSGP74S"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-80XHSGP74S");
+    </script>
     <meta charset="utf-8" />
     <title>Steven Chin - Projects</title>
     <link rel="icon" href="/assets/images/logo.svg" />
